# udpd

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
conan/: conanfile.txt
include/: analyse_result.h
include/processors/: error.h  interface.h
include/processors/type/: tarFile.h  zip.h  zipFile.h
src/: main.cpp
src/processors/: interface.cpp
src/processors/type/: tarFile.cpp  zipFile.cpp
tests/: CMakeLists.txt  functional_test.cpp  sanity_check.cpp  tar_test.cpp  zip_test.cpp
tests/archives/: test.tar
